kustomization/shared/helloworld/overlays/flux/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld
spec:
  selector:
    matchLabels:
      app: helloflux
  template:
    metadata:
      labels:
        app: helloflux
