kustomization/shared/helloworld/overlays/flux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
spec:
  selector:
    app: helloflux
